--- a/pages/portifolio.html
+++ b/pages/portifolio.html
@@ -112,7 +112,7 @@
             <p>3481 Melrose Place Beverly Hills, CA 90210</p>
         </section>
         
-        <section class="social">
+        <section class="social" id="section-lista">
             <h1>AROUND THE WEB</h1>
             <ul>
             <li>
